# DavideUnipi

./: CMakeLists.txt  README.md
ade/test/: a.out  main.v  prova.v
algo/altro/: a.out  quick_3.c  ricerca_binaria.c  ricerca_lineare.c
algo/esame_26_5/: a.out  esame.c
algo/esami_dal_passato/Al_gio_jack/: BObtheman.c  a.out
algo/esami_dal_passato/min_c_mac/: a.out  min_cam_max.c
algo/esami_dal_passato/visitadestra/: a.out  visitiaml.c
algo/esercitazione/: a.out  main.c
algo/lez1/inversione/: a.out  arr.c
algo/lez1/is_first/: a.out  n_primo.c  n_primo.c~
algo/lez1/lab/: a.out  stringhe.c
algo/lez1/minmax/: a.out  minmax.c
algo/lez1/primi_disp/: a.out  somma.c
algo/lez1/somma/: a.out  somma.c  somma.c~
algo/lez1/swap/: a.out  swap.c
algo/lez1/tswap/: a.out  swap.c
algo/lez10/ash_es_1/: MAIN.C  a.out
algo/lez10/lista_rimuovi/: a.out  media.c
algo/lez10/somme_fuffi/: a.out  sommiaml.c
algo/lez12/connesso/: a.out  ceck.c
algo/lez12/diametro/: diametro.c
algo/lez12/doppio/: a.out  bipartito.c
algo/lez12/percorso_minimo/: a.out  minimo.c
algo/lez2/0_9/: a.out  between.c
algo/lez2/anagramma/: a.out  anagramma.c
algo/lez2/find/: a.out  find_in_arr.c  test  test~
algo/lez2/moltiplicazione_stringhe/: a.out  molt.c
algo/lez2/my_strcat3.c/: a.out  cat.c
algo/lez2/my_strcmp/: a.out  strcmp.c
algo/lez2/my_strlen/: a.out  mystrlen.c
algo/lez2/mystrcat1/: a.out  cat.c
algo/lez3/fusione_arr/: a.out  merge.c
algo/lez3/inters_disordinata/: a.out  non_ho_voglia_di_ottimizzare.c
algo/lez3/intersezione_ordinata/: a.out  inter.c
algo/lez3/somma_sott/: a.out  somm.c
algo/lez4/3_way/: a.out  quick_3.c
algo/lez4/basic_quick/: a.out  quick.c
algo/lez4/bin_res_str/: ricerca.c  ricerca.exe.stackdump
algo/lez4/ins_sort_int/: a.out  ins_sort.c
algo/lez4/ins_sort_str/: a.out  alpha_order.c
algo/lez4/my_quick/: a.out  quick.c  quick2.c  test.txt
algo/lez4/quick_strambo/: README  a.out  quick.c
algo/lez4/sel_sort/: a.out  sel_sort.c
algo/lez4/str_quick/: a.out  quick.c
algo/lez5/qsort_int/: a.out  qsort.c
algo/lez5/qsortstr/: a.out  qstring.c
algo/lez5/qsortstruct/: a.out  qstruct.c
algo/lez5/qsortstuing/: a.out  qsructing.c
algo/lez7/k_stringhe/: a.out  piufreq.c
algo/lez7/main_anagram/: a.out  main.c
algo/lez7/pixel/: a.out  puntinicoloreati.c
algo/lez8/bd_e_cont/: a.out  contiaml.c
algo/lez8/listabd/: a.out  lista.c
algo/lez8/listamd/: a.out  lista.c
algo/lez8/movetofront/: a.out  clean.c
algo/lez9/alberobase/: a.out  alberello.c
algo/lez9/ordine/: 2  a.out  ristampa.c
algo/lez9/visita/: a.out  height.c
code_stuff/lez_1/A/: a.out  consegna  main.c
code_stuff/lez_1/B/: a.out  consegna  main.c  soluzione_a_parole
code_stuff/lez_1/C/: a.out  consegna  main.c
code_stuff/round_12_edu/A/: a.out  consegna  main.c
code_stuff/round_12_edu/B/: a.out  consegna  main.c  test~
code_stuff/round_12_edu/C/: a.out  consegna  main.c
code_stuff/round_12_edu/D/: consegna
code_stuff/round_12_edu/F/: consegna
exs/lesson_09/students/: students.c
java/old_pr/proj2019/: Board.java  Data.java  DataBoard.java  Security.java
linux/: cpiupiu.cpp
linux/assignments/automa/: a.exe.stackdump  output.txt  robocop.c
linux/assignments/biblioteca/: biblioteca.c  copiabiblio.c  testout
linux/assignments/morse/: a.exe.stackdump  a.out  creazionealfabeto.c  morse.c  morse2.c  morse3.c  morse4.c  morsesenzar.c  test  testo  testoclear  traduzione.out  try.txt
linux/assignments/polonisman/: a.exe.stackdump  a.out  awewe.c  input.c  lastpolonian.c  leggistinga.out  notazionepolacca.c  polonia.out  polonianism.c  polonianism2.c  readnew.c  readstring.c  readstringbeta.c  recognise.c  test.txt
linux/codechef/calendar/: a.out  calendar.c  test.txt  test.txt~
linux/codechef/coach/: a.out  coach.c  coach.c~  tosubmit.c  tosubmit.c~
linux/codechef/macchine/: a.out  macchine.c
linux/codechef/movingsegments/: a.out  segmenti.c  test
linux/codechef/particles/: a.out  reactor.c
linux/codechef/struct/: a.out  amazon.c  test.txt  test.txt~
linux/esami/: lab.c
linux/esami/02_04_19/: a.out  palindrome.c
linux/esami/13_09_2019/: a.out  array.c
linux/esami/Mirko/: ListaRevisioni.c  M_exam.c  MapClienti.c
linux/esami/lez12/: a.out  input0.txt  input1.txt  input2.txt  input3.txt  lab.c  output0.txt  output1.txt  output3.txt
linux/esami/matrici/: matrici_nelle_matrici.c
linux/esami/regaloDiNatale/: 2  a.out  esame.c
linux/esercizi/programmi/: cambiovaluta.out  palindroma  rette.c  size.out
linux/lez10/dinamatr/: a.out  azzeradiag.c
linux/lez10/es1/: a.out  es1.c
linux/lez10/matricole/: matricol.c
linux/lez10/ordceck/: a.out  input1.txt  input2.txt  ordered.c
linux/lez7/duearray/: a.out
linux/lez7/min_azzera/: minazzera.c
linux/lez7/multiplidi3/: a.out  multipli.c
linux/lez7/seqinvertita.c/: a.out
linux/lez7/sequenza/: a.out  input0.txt  input2.txt  input3.txt  output0.txt  output1.txt  seq.c
linux/lez7/sommamat/: testo
linux/lez7/verificacondizione/: a.out  verificacondizione.c
linux/lez8/: occorrenza.c
linux/lez8/abs/: a.out
linux/lez8/filst/: a.out  occorrenza.c
linux/lez8/pig/: a.out  input0.txt  input1.txt  output0.txt  output2.txt  pig.c
linux/lez8/swap/: swap.c
linux/lez8/ticta.c/: a.out
linux/lez9/bioseq/: testo
linux/lez9/dipendenti/: a.out  dipendenti.c
linux/lez9/elezioni/: backupel.c  elezioni.c
linux/lez9/insort/: inssortlist.c
linux/lez9/ordone/: a.out  intord.c
linux/lez9/pila/: pila.c
linux/lez9/remove/: a.out  rimozione.c
linux/lezioni/12/: esame.c
linux/lezioni/lez11/: staticint.c
linux/lezioni/lez12/: a.out  esame.c  lab.c  output2.txt
linux/parcheggi/: parcheggio.c
linux/provevarie/: cplasplas.out
linux/provevarie/arraydipuntatori/: a.out  scanf.c
linux/provevarie/esercizi/: proteina  prova
ocam/: prova1.ml  prova1.ml~
py3.8/: weather.csv
py3.8/programs/: install.txt  meteomassa.py  qualcosa_con_internet.py
python/: test.py
python/esercizi/: centered.py  double_language_support.py  esame.py  tempo_.py
(+272 files in other folders)
